--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "1.0.0",
   "private": true,
-    "scripts": {
+  "scripts": {
     "ng": "ng",
     "build": "npm run write:env -s && ng build",
     "start": "npm run write:env -s && ng serve --proxy-config proxy.conf.js",
@@ -33,6 +33,10 @@
     "@ngx-translate/core": "^14.0.0",
     "@angular/service-worker": "~14.1.3",
     "@ionic/angular": "^6.2.4",
+    "@feathersjs/authentication-client": "^4.5.8",
+    "@feathersjs/feathers": "^4.5.8",
+    "@feathersjs/socketio-client": "^4.5.8",
+    "feathers-reactive": "^0.8.2",
     "rxjs": "^7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
