--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm run write:env -s && ng build",
     "start": "npm run write:env -s && ng serve --proxy-config proxy.conf.js",
     "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
+    "build:web": "npm run env -s && ng build --output-path=/Users/shawn/projects/backend/public",
     "lint": "ng lint && stylelint \"src/**/*.scss\"",
     "test": "npm run write:env -s && ng test",
     "test:ci": "npm run write:env -s && npm run lint -s && ng run frontend:test:ci",
