--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "build": "npm run write:env -s && ng build",
-    "start": "npm run write:env -s && ng serve --proxy-config proxy.conf.js",
+    "start": "npm run write:env -s && ng serve --proxy-config proxy.conf.js --host=0.0.0.0 --disable-host-check",
     "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
     "build:web": "npm run env -s && ng build --output-path=/Users/shawn/projects/backend/public",
     "lint": "ng lint && stylelint \"src/**/*.scss\"",
